Updating docs for 1.41.0 of web SDK

--- a/classes/MapView.html
+++ b/classes/MapView.html
@@ -195,8 +195,6 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MapView Class
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </a>
     </h1>
 </div>
 
@@ -207,9 +205,6 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
-        <div class="foundat">
-            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L1">source/Mappedin.MapView.js:1</a>
-        </div>
 </div>
 
 
@@ -245,8 +240,6 @@
 
 	<div class="meta">
 				<p>
-				Defined in
-		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L1">source/Mappedin.MapView.js:1</a>
 		</p>
 
 
@@ -604,8 +597,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L265">source/Mappedin.MapView.js:265</a>
   		</p>
   
   
@@ -657,8 +648,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L274">source/Mappedin.MapView.js:274</a>
   		</p>
   
   
@@ -710,8 +699,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L99">source/Mappedin.MapView.js:99</a>
   		</p>
   
   
@@ -763,8 +750,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L320">source/Mappedin.MapView.js:320</a>
   		</p>
   
   
@@ -810,8 +795,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L256">source/Mappedin.MapView.js:256</a>
   		</p>
   
   
@@ -849,8 +832,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L246">source/Mappedin.MapView.js:246</a>
   		</p>
   
   
@@ -903,8 +884,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapManager.js#L379">source/Mappedin.MapManager.js:379</a>
   		</p>
   
   
@@ -989,8 +968,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L346">source/Mappedin.MapView.js:346</a>
   		</p>
   
   
@@ -1057,8 +1034,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L453">source/Mappedin.MapView.js:453</a>
   		</p>
   
   
@@ -1118,6 +1093,9 @@
   				<li class="arg">
   						<code class="optional">map=this.currentMap</code>
   				</li>
+  				<li class="arg">
+  						<code>options</code>
+  				</li>
   			</ul><span class="paren">)</span>
   		</div>
   		<span class="returns-inline">
@@ -1133,8 +1111,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L305">source/Mappedin.MapView.js:305</a>
   		</p>
   
   
@@ -1187,6 +1163,15 @@
   </div>
   
   				</li>
+  				<li class="param">
+  						<code class="param-name">options</code>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  
+  
+  					<div class="param-description"><p>Passes on options (e.g. rotation, collisions, rotation with camera) to MapView.Marker's options argument.</p>
+  </div>
+  
+  				</li>
   			</ul>
   		</div>
   
@@ -1231,8 +1216,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L502">source/Mappedin.MapView.js:502</a>
   		</p>
   
   
@@ -1358,8 +1341,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L487">source/Mappedin.MapView.js:487</a>
   		</p>
   
   
@@ -1432,8 +1413,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L433">source/Mappedin.MapView.js:433</a>
   		</p>
   
   
@@ -1503,8 +1482,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L443">source/Mappedin.MapView.js:443</a>
   		</p>
   
   
@@ -1579,8 +1556,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapManager.js#L278">source/Mappedin.MapManager.js:278</a>
   		</p>
   
   
@@ -1691,8 +1666,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L143">source/Mappedin.MapView.js:143</a>
   		</p>
   
   
@@ -1833,8 +1806,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L130">source/Mappedin.MapView.js:130</a>
   		</p>
   
   
@@ -1934,8 +1905,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L118">source/Mappedin.MapView.js:118</a>
   		</p>
   
   
@@ -2014,8 +1983,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L202">source/Mappedin.MapView.js:202</a>
   		</p>
   
   
@@ -2064,8 +2031,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L465">source/Mappedin.MapView.js:465</a>
   		</p>
   
   
@@ -2129,8 +2094,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L369">source/Mappedin.MapView.js:369</a>
   		</p>
   
   
@@ -2194,8 +2157,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L359">source/Mappedin.MapView.js:359</a>
   		</p>
   
   
@@ -2259,8 +2220,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L567">source/Mappedin.MapView.js:567</a>
   		</p>
   
   
@@ -2320,8 +2279,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L185">source/Mappedin.MapView.js:185</a>
   		</p>
   
   
@@ -2370,8 +2327,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L175">source/Mappedin.MapView.js:175</a>
   		</p>
   
   
@@ -2432,8 +2387,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L412">source/Mappedin.MapView.js:412</a>
   		</p>
   
   
@@ -2518,8 +2471,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L379">source/Mappedin.MapView.js:379</a>
   		</p>
   
   
@@ -2550,7 +2501,15 @@
   									<code class="param-name">text</code>
   									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
   
-  								<div class="param-description"><p>The text to use for the label.</p>
+  								<div class="param-description"><p>The full name text to use for the label.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name">shortText</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  
+  								<div class="param-description"><p>The short name text to use for the label.</p>
   </div>
   
   							</li>
@@ -2719,8 +2678,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L212">source/Mappedin.MapView.js:212</a>
   		</p>
   
   
@@ -2778,8 +2735,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L295">source/Mappedin.MapView.js:295</a>
   		</p>
   
   
@@ -2821,8 +2776,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L283">source/Mappedin.MapView.js:283</a>
   		</p>
   
   
@@ -2879,8 +2832,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L425">source/Mappedin.MapView.js:425</a>
   		</p>
   
   
@@ -2911,8 +2862,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L338">source/Mappedin.MapView.js:338</a>
   		</p>
   
   
@@ -2943,8 +2892,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L529">source/Mappedin.MapView.js:529</a>
   		</p>
   
   
@@ -2981,8 +2928,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L106">source/Mappedin.MapView.js:106</a>
   		</p>
   
   
@@ -3034,8 +2979,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L329">source/Mappedin.MapView.js:329</a>
   		</p>
   
   
@@ -3087,8 +3030,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L520">source/Mappedin.MapView.js:520</a>
   		</p>
   
   
@@ -3134,8 +3075,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L194">source/Mappedin.MapView.js:194</a>
   		</p>
   
   
@@ -3175,8 +3114,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L537">source/Mappedin.MapView.js:537</a>
   		</p>
   
   
@@ -3238,8 +3175,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L90">source/Mappedin.MapView.js:90</a>
   		</p>
   
   
@@ -3297,8 +3232,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L235">source/Mappedin.MapView.js:235</a>
   		</p>
   
   
@@ -3364,8 +3297,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L547">source/Mappedin.MapView.js:547</a>
   		</p>
   
   
@@ -3405,8 +3336,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L226">source/Mappedin.MapView.js:226</a>
   		</p>
   
   
@@ -3452,8 +3381,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L36">source/Mappedin.MapView.js:36</a>
           </p>
   
   
@@ -3547,8 +3474,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L66">source/Mappedin.MapView.js:66</a>
           </p>
   
   
@@ -3576,8 +3501,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L26">source/Mappedin.MapView.js:26</a>
           </p>
   
   
@@ -3606,8 +3529,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L74">source/Mappedin.MapView.js:74</a>
           </p>
   
   
@@ -3634,8 +3555,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L82">source/Mappedin.MapView.js:82</a>
           </p>
   
   
@@ -3664,8 +3583,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L17">source/Mappedin.MapView.js:17</a>
           </p>
   
   
@@ -3694,8 +3611,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L58">source/Mappedin.MapView.js:58</a>
           </p>
   
   
