--- a/classes/MapView3D.html
+++ b/classes/MapView3D.html
@@ -195,8 +195,6 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MapView3D Class
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </a>
     </h1>
 </div>
 
@@ -210,9 +208,6 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
-        <div class="foundat">
-            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView3D.js#L56">source/Mappedin.MapView3D.js:56</a>
-        </div>
 </div>
 
 
@@ -248,8 +243,6 @@
 
 	<div class="meta">
 				<p>
-				Defined in
-		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView3D.js#L56">source/Mappedin.MapView3D.js:56</a>
 		</p>
 
 
@@ -646,8 +639,6 @@
   			<a href="../classes/MapView.html#method_addInteractivePolygon">
   				MapView
   			</a>
-  			but overwritten in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L265">source/Mappedin.MapView.js:265</a>
   		</p>
   
   
@@ -700,7 +691,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_addMap">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L99">source/Mappedin.MapView.js:99</a>
   		</p>
   
   
@@ -753,7 +743,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_addMarker">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L320">source/Mappedin.MapView.js:320</a>
   		</p>
   
   
@@ -800,7 +789,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_clearAllPolygonColors">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L256">source/Mappedin.MapView.js:256</a>
   		</p>
   
   
@@ -839,7 +827,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_clearPolygonColor">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L246">source/Mappedin.MapView.js:246</a>
   		</p>
   
   
@@ -893,7 +880,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_contractMaps">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapManager.js#L379">source/Mappedin.MapManager.js:379</a>
   		</p>
   
   
@@ -979,7 +965,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_convertTo3DMapPosition">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L346">source/Mappedin.MapView.js:346</a>
   		</p>
   
   
@@ -1047,7 +1032,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_createFont">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L453">source/Mappedin.MapView.js:453</a>
   		</p>
   
   
@@ -1107,6 +1091,9 @@
   				<li class="arg">
   						<code class="optional">map=this.currentMap</code>
   				</li>
+  				<li class="arg">
+  						<code>options</code>
+  				</li>
   			</ul><span class="paren">)</span>
   		</div>
   		<span class="returns-inline">
@@ -1123,7 +1110,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_createMarker">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L305">source/Mappedin.MapView.js:305</a>
   		</p>
   
   
@@ -1176,6 +1162,15 @@
   </div>
   
   				</li>
+  				<li class="param">
+  						<code class="param-name">options</code>
+  						<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Object" class="crosslink external" target="_blank">Object</a></span>
+  
+  
+  					<div class="param-description"><p>Passes on options (e.g. rotation, collisions, rotation with camera) to MapView.Marker's options argument.</p>
+  </div>
+  
+  				</li>
   			</ul>
   		</div>
   
@@ -1208,8 +1203,6 @@
   
   	<div class="meta">
   				<p>
-  				Defined in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView3D.js#L2177">source/Mappedin.MapView3D.js:2177</a>
   		</p>
   
   
@@ -1255,8 +1248,6 @@
   			<a href="../classes/MapView.html#method_drawPath">
   				MapView
   			</a>
-  			but overwritten in
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L487">source/Mappedin.MapView.js:487</a>
   		</p>
   
   
@@ -1330,7 +1321,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_enableImageFlippingForAllLocations">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L433">source/Mappedin.MapView.js:433</a>
   		</p>
   
   
@@ -1401,7 +1391,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_enableImageFlippingForPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L443">source/Mappedin.MapView.js:443</a>
   		</p>
   
   
@@ -1477,7 +1466,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_expandMaps">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapManager.js#L278">source/Mappedin.MapManager.js:278</a>
   		</p>
   
   
@@ -1589,7 +1577,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_focusOn">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L143">source/Mappedin.MapView.js:143</a>
   		</p>
   
   
@@ -1731,7 +1718,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_focusOnPath">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L130">source/Mappedin.MapView.js:130</a>
   		</p>
   
   
@@ -1832,7 +1818,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_focusOnPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L118">source/Mappedin.MapView.js:118</a>
   		</p>
   
   
@@ -1912,7 +1897,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getNorth">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L202">source/Mappedin.MapView.js:202</a>
   		</p>
   
   
@@ -1962,7 +1946,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getPathLength">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L465">source/Mappedin.MapView.js:465</a>
   		</p>
   
   
@@ -2027,7 +2010,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getPositionNode">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L369">source/Mappedin.MapView.js:369</a>
   		</p>
   
   
@@ -2092,7 +2074,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getPositionPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L359">source/Mappedin.MapView.js:359</a>
   		</p>
   
   
@@ -2157,7 +2138,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getPrimaryLocationForPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L567">source/Mappedin.MapView.js:567</a>
   		</p>
   
   
@@ -2218,7 +2198,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getZoomLevelForCurrentMap">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L185">source/Mappedin.MapView.js:185</a>
   		</p>
   
   
@@ -2268,7 +2247,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_getZoomLevelForPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L175">source/Mappedin.MapView.js:175</a>
   		</p>
   
   
@@ -2330,7 +2308,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_labelAllLocations">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L412">source/Mappedin.MapView.js:412</a>
   		</p>
   
   
@@ -2416,7 +2393,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_labelPolygon">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L379">source/Mappedin.MapView.js:379</a>
   		</p>
   
   
@@ -2447,7 +2423,15 @@
   									<code class="param-name">text</code>
   									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
   
-  								<div class="param-description"><p>The text to use for the label.</p>
+  								<div class="param-description"><p>The full name text to use for the label.</p>
+  </div>
+  
+  							</li>
+  							<li class="param">
+  									<code class="param-name">shortText</code>
+  									<span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/String" class="crosslink external" target="_blank">String</a></span>
+  
+  								<div class="param-description"><p>The short name text to use for the label.</p>
   </div>
   
   							</li>
@@ -2617,7 +2601,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_lockNorth">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L212">source/Mappedin.MapView.js:212</a>
   		</p>
   
   
@@ -2676,7 +2659,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_onNothingClicked">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L295">source/Mappedin.MapView.js:295</a>
   		</p>
   
   
@@ -2719,7 +2701,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_onPolygonClicked">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L283">source/Mappedin.MapView.js:283</a>
   		</p>
   
   
@@ -2777,7 +2758,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removeAllLabels">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L425">source/Mappedin.MapView.js:425</a>
   		</p>
   
   
@@ -2809,7 +2789,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removeAllMarkers">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L338">source/Mappedin.MapView.js:338</a>
   		</p>
   
   
@@ -2841,7 +2820,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removeAllPaths">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L529">source/Mappedin.MapView.js:529</a>
   		</p>
   
   
@@ -2879,7 +2857,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removeMap">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L106">source/Mappedin.MapView.js:106</a>
   		</p>
   
   
@@ -2932,7 +2909,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removeMarker">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L329">source/Mappedin.MapView.js:329</a>
   		</p>
   
   
@@ -2985,7 +2961,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_removePathSegment">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L520">source/Mappedin.MapView.js:520</a>
   		</p>
   
   
@@ -3032,7 +3007,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_resetCamera">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L194">source/Mappedin.MapView.js:194</a>
   		</p>
   
   
@@ -3073,7 +3047,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_setBackgroundColor">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L537">source/Mappedin.MapView.js:537</a>
   		</p>
   
   
@@ -3136,7 +3109,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_setMap">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L90">source/Mappedin.MapView.js:90</a>
   		</p>
   
   
@@ -3195,7 +3167,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_setPolygonColor">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L235">source/Mappedin.MapView.js:235</a>
   		</p>
   
   
@@ -3262,7 +3233,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_tryRendering">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L547">source/Mappedin.MapView.js:547</a>
   		</p>
   
   
@@ -3303,7 +3273,6 @@
   	<div class="meta">
   				<p>Inherited from
   				<a href="../classes/MapView.html#method_unlockNorth">MapView</a>:
-  		<a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L226">source/Mappedin.MapView.js:226</a>
   		</p>
   
   
@@ -3350,7 +3319,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_colors">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L36">source/Mappedin.MapView.js:36</a>
           </p>
   
   
@@ -3445,7 +3413,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_container">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L66">source/Mappedin.MapView.js:66</a>
           </p>
   
   
@@ -3474,7 +3441,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_controls">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L26">source/Mappedin.MapView.js:26</a>
           </p>
   
   
@@ -3504,7 +3470,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_currentMap">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L74">source/Mappedin.MapView.js:74</a>
           </p>
   
   
@@ -3532,7 +3497,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_focusZoomFactor">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L82">source/Mappedin.MapView.js:82</a>
           </p>
   
   
@@ -3560,8 +3524,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView3D.js#L2067">source/Mappedin.MapView3D.js:2067</a>
           </p>
   
   
@@ -3591,7 +3553,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_type">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L17">source/Mappedin.MapView.js:17</a>
           </p>
   
   
@@ -3621,7 +3582,6 @@
       <div class="meta">
                   <p>Inherited from
                   <a href="../classes/MapView.html#property_venue">MapView</a>:
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.MapView.js#L58">source/Mappedin.MapView.js:58</a>
           </p>
   
   
