--- a/classes/MappedinDirections.html
+++ b/classes/MappedinDirections.html
@@ -195,8 +195,6 @@
 
 <div class="page-header">
     <h1> <i class="fa fa-bookmark-o" aria-hidden="true"></i> MappedinDirections Class
-              <i class="fa fa-pencil" aria-hidden="true"></i>
-            </a>
     </h1>
 </div>
 
@@ -207,9 +205,6 @@
             Module: <a href="../modules/Mappedin.html">Mappedin</a>
 
 
-        <div class="foundat">
-            Defined In: <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.getVenue.js#L640">source/Mappedin.getVenue.js:640</a>
-        </div>
 </div>
 
 
@@ -257,6 +252,15 @@
 
                               </li>
                               <li class="index-item property">
+                                  <a href="#property_directionsProvider">directionsProvider</a>
+
+                                      <span class="flag static">static</span>
+                              </li>
+                              <li class="index-item property">
+                                  <a href="#property_distance">distance</a>
+
+                              </li>
+                              <li class="index-item property">
                                   <a href="#property_path">path</a>
 
                               </li>
@@ -282,8 +286,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.getVenue.js#L644">source/Mappedin.getVenue.js:644</a>
           </p>
   
   
@@ -291,6 +293,60 @@
   
       <div class="description">
           <p>Directions to display to the user.</p>
+  
+      </div>
+  
+  
+  
+  </div>
+  <div id="property_directionsProvider" class="property item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#property_directionsProvider"></a>
+          directionsProvider
+      </h3>
+      <span class="type">"online", "offline"</span>
+  
+  
+  
+          <span class="flag final">const</span>
+  
+          <span class="flag static">static</span>
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>The source of wayfinding directions.</p>
+  
+      </div>
+  
+  
+  
+  </div>
+  <div id="property_distance" class="property item">
+      <h3 class="name anchorable-toc">
+          <a class="fa fa-link toc-anchor" href="#property_distance"></a>
+          distance
+      </h3>
+      <span class="type"><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Number" class="crosslink external" target="_blank">Number</a></span>
+  
+  
+  
+  
+  
+      <div class="meta">
+                  <p>
+          </p>
+  
+  
+      </div>
+  
+      <div class="description">
+          <p>Total distance of path in meters</p>
   
       </div>
   
@@ -310,8 +366,6 @@
   
       <div class="meta">
                   <p>
-                  Defined in
-          <a href="https://github.com/MappedIn/platform-api/blob/1/source/Mappedin.getVenue.js#L649">source/Mappedin.getVenue.js:649</a>
           </p>
   
   
